k8s-ingress/app2/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  # these labels are replicaset labels
  labels:
    project: roboshop
    tier: frontend
    component: app2
spec:
  replicas: 2
  selector: 
    # using these labels replica set selects the pod    
    matchLabels:
      project: roboshop
      tier: frontend
      component: app2

    # this is pod definition, pod is subset of replica
  template:
    metadata: 
      labels:
       project: roboshop
       tier: frontend
       component: app2
    spec:
     containers:
     - name: app2
       image: kopparthiprasanna/app2:1.0.0


---
# for headless  we have attached this service to deployment and we have not given cluster ip to this service so that we can access the pod directly using dns name of the pod.
apiVersion: v1
kind: Service
metadata: 
  name: app2
spec:  

  selector:
  # labels are used as selectors.so service add the pod which is having these labels.
    project: roboshop
    tier: frontend
    component: app2
  ports:
  - protocol: TCP
    port: 80 # service port
    targetPort: 80 # container port  

---

# ingress rule and host is listner rule.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app2
  annotations:
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
     alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:370400270361:certificate/bc1ed7e1-0a72-4081-8c3b-113878872411 #we have to give our  certificate arn
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/tags: Environment=dev, Project=roboshop
     alb.ingress.kubernetes.io/target-type: ip
     alb.ingress.kubernetes.io/group.name: roboshop



spec:
  ingressClassName: alb  
  rules:
  - host: "app2.prasanna.fun"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: app2
            port:
              number: 80
